--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "zinebdjardi",
   "version": "1.0.0",
   "scripts": {
-    "build": "webpack --mode production",
-    "dev": "webpack --mode development --watch",
-    "start": "webpack serve -c webpack.config.dev.js"
+    "build": "webpack -c webpack.production.config",
+    "dev": "webpack -c webpack.development.config.js --watch",
+    "start": "webpack serve -c webpack.development.config.js"
   },
   "author": "prakt",
   "license": "ISC",
@@ -15,6 +15,7 @@
     "@maeertin/medialoaded": "^1.2.1",
     "babel-loader": "^8.2.3",
     "bootstrap": "^5.1.3",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.6.0",
     "fontfaceobserver": "^2.3.0",
     "gsap": "^3.9.1",
